% borrowed some formatting from
% http://svn.r-project.org/R/trunk/doc/NEWS.Rd
% -*- coding: utf-8 -*-
%%\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}
%%\newcommand{\Rlogo}{\if{html}{\figure{../../html/logo.jpg}}\if{latex}{\figure{logo.jpg}{options:
%width=0.5in}}}
\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
%\code{} or \Code{}?

\name{strain}
\title{News for package 'strain'}
\encoding{UTF-8}

\section{CHANGES in strain VERSION 0.2-8 (2018-11-05)}{
  \itemize{
    \item Fixed subtle bug in hfbsm script
  }
}
\section{CHANGES in strain VERSION 0.2-7 (2018-01-04)}{
  \itemize{
    \item Made the hfbsm process more robust, and easier to identify failure points.
    \item Adjusted the repo url.
  }
}
\section{CHANGES in strain VERSION 0.2-1 (2013-08-22)}{
  \itemize{
    \item Things have improved much since first version.
    Now the code includes (untested) Coulomb stress calculations.
  }
}
\section{CHANGES in strain VERSION 0.1-1 (2013-07-01)}{
  \itemize{
    \item First version, a very crude one at that.
  }
}