@@ -1,8 +1,8 @@
 Package: strain
 Type: Package
 Title: Tools for working with strainmeter and PBO borehole data
-Version: 0.2-8
-Date: 2018-11-05
+Version: 0.2.9
+Date: 2019-10-07
 Author: Andrew J. Barbour
 Maintainer: Andrew J. Barbour <andy.barbour@gmail.com>
 License: GPL (>= 2)
@@ -31,6 +31,6 @@ Imports:
     cli,
     crayon
 Encoding: UTF-8
-RoxygenNote: 6.1.0
+RoxygenNote: 6.1.1
 Suggests: testthat,
     covr
