@@ -3,10 +3,10 @@
 import sys, platform
 
 def main():
-    print (platform.python_implementation())
-    print (platform.python_version())
-    print (platform.python_build())
-    print (platform.python_compiler())
+    print(platform.python_implementation())
+    print(platform.python_version())
+    print(platform.python_build())
+    print(platform.python_compiler())
 
 if __name__ == '__main__':
 
